# bethesda-strings-editor-KR_Edit

./: .cliff.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Modelfile  Modelfile-mamaylm  Modelfile.gemma4  Modelfile.gemma4-opus48  Modelfile.qc  README.md  SECURITY.md  TRANSLATING.md  VERIFICATION.md  _version.py  bethesda_strings_editor.spec  clean_bse_cache.py  gemini_proxy.py  ko_glossary_propernouns.json  main.py  protected_terms_starfield_hq.txt  pyproject.toml  pyrightconfig.json  release-signing-key.asc  requirements.txt  run_bsek.bat
.weblate/: component.yml
aur/: .SRCINFO  PKGBUILD  bethesda-strings-editor.desktop
benchmarks/: README.md  bench_core_io.py  bench_fuzzy_match.py  bench_term_protector.py  bench_translation_cache.py
bethesda_strings/: __init__.py  ba2_handler.py  character_profiles.py  core.py  dialogue_tree.py  encoding.py  esp_diff.py  esp_handler.py  font_checker.py  lore_db.py  operations.py  txt_handler.py  version_diff.py  vmad_handler.py  wwise_voice.py  xml_handler.py
docs/: architecture.rst  conf.py  contributing.rst  format-spec.rst  index.rst  requirements.txt
gui/: _word_checker_base.py  advanced_search_dialog.py  ai_qc_worker.py  app_settings.py  audio_preview_panel.py  audit_log.py  ba2_picker_dialog.py  background_manager.py  batch_translate_dialog.py  claude_chat_panel.py  claude_client.py  claude_translation_worker.py  command_palette.py  consistency_checker.py  consistency_dialog.py  crash_recovery.py  de_word_checker.py  desktop_notify.py  detached_table_window.py  dialogue_tree_dialog.py  diff_viewer.py  en_word_checker.py  es_word_checker.py  esp_migrate_dialog.py  file_dialog_helper.py  focus_overlay.py  font_checker_dialog.py  fr_word_checker.py  fuzzy_match.py  gender_checker.py  gender_dialog.py  glossary.py  glossary_editor.py  gpu_monitor.py  it_word_checker.py  keyboard_manager.py  ko_word_checker.py  log_setup.py  lore_rag_dialog.py  lore_rag_manager.py  (+55 more)
resources/: style.qss  (+2 more)
(+51 files in other folders)
